--- a/html/index.html
+++ b/html/index.html
@@ -4,15 +4,22 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home Page???</title>
+        <title>Home Page</title>
         <!-- Bootstrap CSS-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
         <!-- Stylesheet -->
         <link rel="stylesheet" href="../css/style.css">
 
-        <!-- Fonts and Images -->
+        <!-- Images -->
         <link rel="icon" href="../images/favicon.ico">
+        <script src="https://kit.fontawesome.com/f9e1186338.js" crossorigin="anonymous"></script>
+
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@400;500&family=Indie+Flower&display=swap" rel="stylesheet">
 
     </head>
 
@@ -27,16 +34,55 @@
 
                 <ul class="navbar-nav ms-auto">
                     <li>
-                        <a class = "nav-link" href="projects.html">Projects</a>
+                        <a class = "nav-link" href="https://github.com/Hieule7401">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
                     </li>
                     <li>
-                        <a class = "nav-link" href="experience.html">Experience</a>
+                        <a class = "nav-link" href="https://www.linkedin.com/in/minhhieule/">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
                     </li>
+
                 </ul>
               </nav>
         </div>
 
-        <!-- Carousel -->
+        <div class="segment-container">
+            <!-- About Me -->
+            <div class="page-segment" id="segment1">
+                <div class="segment1-description">
+                    <h1 id="name">Minh-Hieu Le</h1>
+                    <h6 id="description">Software Engineer - Resume 
+                        <a href="images/MHL_Resume.pdf" class="resume-button" download>
+                            <i class="fa-solid fa-download"></i>
+                        </a>
+                    </h6>
+                </div>
+            </div>
+
+            <!-- Skills And Experience -->
+            <div class="page-segment" id="segment2">
+                <div class="segment2-table">
+                    <p>hu</p>
+                </div>
+            </div>
+
+            <!-- Project 1 -->
+            <div class="page-segment" id="segment3">
+                <div class="segment3-description">
+                    <p>Projects</p>
+                </div>
+            </div>
+
+            <!-- Contact Me -->
+            <div class="page-segment" id="segment4">
+                <div class="segment4-description">
+                    <p>Contact Me</p>
+                </div>
+            </div>
+        </div>
+
 
 
 
